@startuml
'https://plantuml.com/class-diagram

class Operation {
    double numberA
    double numberB
    double getResult()
}
note left: Abstract Product

package "Concrete Product"{
class OperationAdd {
    double getResult()
}
class OperationSub {
    double getResult()
}
class OperationMul {
    double getResult()
}
class OperationDiv {
    double getResult()
}
}

class OperationFactory {
    {static} Operation createOperation()
}
note left: Simple Factory

Operation <|-- OperationAdd
Operation <|-- OperationSub
Operation <|-- OperationMul
Operation <|-- OperationDiv
OperationFactory ..> Operation

@enduml